--- a/src/i18n/fi.json
+++ b/src/i18n/fi.json
@@ -111,5 +111,7 @@
   "messagePlaceholder": "Onko jotain erityistä, mitä haluat meidän tietävän?",
   "submitButton": "Lähetä",
   "contactInformation": "Yhteystiedot",
-  "or": "T\nA\nI"
+  "or": "T\nA\nI",
+  "packageNote1": "* 24,7 €/h verovähennyksen jälkeen",
+  "packageNote2": "** 28,6 €/h verovähennyksen jälkeen"
 }
