Update more Services

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -49,20 +49,27 @@
   "formStatusSuccess": "Message sent successfully!",
   "formStatusError": "Failed to send message. Please try again later.",
   "serviceIncludeHeading": "What does our service include?",
-  "service1Question": "Generally, in all facilities",
-  "service1Answer": "- Dusting of horizontal surfaces (at the height of max. 1.8 meters)\n- Cleaning stains from doors, door handles, and light switches\n- Wiping mirrors and glass surfaces (excluding windows)\n- Dusting window sills (at the height of max. 1.8m)\n- Vacuuming floors and baseboards\n- Vacuuming carpets (considering the material of the carpets)\n- Mopping the floors (taking into account the floor material)\n- Organizing things neatly",
-  "service2Question": "In the kitchen",
-  "service2Answer": "- Cleaning the sink and faucets\n- Cleaning horizontal surfaces (at the height of max. 1.8 m)\n- Cleaning the stove\n- Cleaning the splashback tiles\n- Stain cleaning of the microwave, refrigerator, oven, stove, and dishwasher from the outer surfaces\n- Wiping and polishing kitchen appliances (toaster, coffee machine, etc.)\n- Cleaning the inside of the microwave oven\n- Cleaning of the trash cabinet and trash cans\n- Putting dirty dishes in the dishwasher",
-  "service3Question": "Bathroom and WC",
-  "service3Answer": "- Cleaning of horizontal surfaces (max 1.8 m high)\n- Washing the sink and the bathtub\n- Cleaning the toilet seat and its surroundings\n- Cleaning of faucets and shower head\n- Cleaning the glass shower wall\n- Cleaning the grate of the floor drain in the shower room\n- Cleaning the sauna door\n- Vacuuming and mopping the sauna floor where possible reach\n- Cleaning stains from the outer surfaces of the washing machine and dryer",
-  "service4Question": "In the bedroom and other rooms",
-  "service4Answer": "- Dusting picture frames, lampshades, and high horizontal surfaces (at the height of max. 1.8m)\n- Making the bed\n- Vacuuming the sofa and upholstered furniture",
-  "service5Question": "Additionally, upon request",
-  "service5Answer": "- Emptying and taking out the garbage (requires access to the garbage shelter)\n- Moving heavy furniture (over 6 kg) and cleaning behind it\n- Cleaning the balcony (e.g., floor, furniture)\n- Cleaning the cabinets from the inside\n- Cleaning surfaces over 1.8 m (requires a small ladder or stool)\n- Cleaning stains from the walls (Please note that stain removal can leave a mark on the wall.)\n- Deep cleaning of bathroom floor tiles by brushing\n- Wiping the entire height of the bathroom walls\n- Cleaning of radiators\n- Cleaning the blinds from dust\n- Cleaning plants from dust\n- Sauna washing +30-45 min (depending on the size of the sauna)\n- Cleaning the inside of the refrigerator +45-60 min/single-door refrigerator\n- Cleaning the inside of the oven +45-75 min (depending on the cleaning need)\n- Extraction and cleaning of the cooker hood filter +30 min\n- Changing bed linen +20-40 min (depending on the size and type of bed subject to)\n- Ironing\n- Washing dishes by hand\n- Removing difficult stains (for example, paint, lime, etc.)",
-  "servicesHeading": "Our Services",
+  "homeService1Question": "Generally, in all facilities",
+  "homeService1Answer": "- Emptying and taking out the garbage (requires access to the garbage shelter)\n- Dusting of horizontal surfaces (at the height of max. 1.8 meters)\n- Cleaning stains from doors, door handles, and light switches\n- Wiping mirrors and glass surfaces (excluding windows)\n- Dusting window sills (at the height of max. 1.8m)\n- Vacuuming floors and baseboards\n- Vacuuming carpets (considering the material of the carpets)\n- Mopping the floors (taking into account the floor material)\n- Organizing things neatly",
+  "homeService2Question": "In the kitchen",
+  "homeService2Answer": "- Cleaning the sink and faucets\n- Cleaning horizontal surfaces (at the height of max. 1.8 m)\n- Cleaning the stove\n- Cleaning the splashback tiles\n- Stain cleaning of the microwave, refrigerator, oven, stove, and dishwasher from the outer surfaces\n- Wiping and polishing kitchen appliances (toaster, coffee machine, etc.)\n- Cleaning the inside of the microwave oven\n- Cleaning of the trash cabinet and trash cans\n- Putting dirty dishes in the dishwasher",
+  "homeService3Question": "Bathroom and WC",
+  "homeService3Answer": "- Cleaning of horizontal surfaces (max 1.8 m high)\n- Washing the sink and the bathtub\n- Cleaning the toilet seat and its surroundings\n- Cleaning of faucets and shower head\n- Cleaning the glass shower wall\n- Cleaning the grate of the floor drain in the shower room\n- Cleaning the sauna door\n- Vacuuming and mopping the sauna floor where possible reach\n- Cleaning stains from the outer surfaces of the washing machine and dryer",
+  "homeService4Question": "In the bedroom and other rooms",
+  "homeService4Answer": "- Dusting picture frames, lampshades, and high horizontal surfaces (at the height of max. 1.8m)\n- Making the bed\n- Vacuuming the sofa and upholstered furniture\n- Changing bed linen",
+  "homeService5Question": "Additionally, upon request",
+  "homeService5Answer": "- Moving heavy furniture (over 6 kg) and cleaning behind it\n- Cleaning the balcony (e.g., floor, furniture)\n- Cleaning the cabinets from the inside\n- Cleaning surfaces over 1.8 m (requires a small ladder or stool)\n- Wiping the entire height of the bathroom walls\n- Cleaning of radiators\n- Cleaning the blinds from dust\n- Cleaning plants from dust\n- Sauna washing +30-45 min (depending on the size of the sauna)\n- Cleaning the inside of the refrigerator +45-60 min/single-door refrigerator\n- Cleaning the inside of the oven +45-75 min (depending on the cleaning need)\n- Ironing",
+  "movingService1Question": "In general / all spaces",
+  "movingService1Answer": "- Emptying and taking out the garbage (requires access to the garbage shelter)\n- Dusting of horizontal surfaces (at the height of max. 1.8 meters)\n- Cleaning stains from doors, door handles, and light switches\n- Wiping mirrors and glass surfaces (excluding windows)\n- Dusting window sills (at the height of max. 1.8m)\n- Vacuuming floors and baseboards\n- Vacuuming carpets (considering the material of the carpets)\n- Mopping the floors (taking into account the floor material)\n- Organizing things neatly",
+  "movingService2Question": "Kitchen",
+  "movingService2Answer": "- Cleaning the sink and faucets\n- Cleaning horizontal surfaces (at the height of max. 1.8 m)\n- Cleaning the stove\n- Cleaning the splashback tiles\n- Stain cleaning of the microwave, refrigerator, oven, stove, and dishwasher from the outer surfaces\n- Wiping and polishing kitchen appliances (toaster, coffee machine, etc.)\n- Cleaning the inside of the microwave oven\n- Cleaning of the trash cabinet and trash cans\n- Putting dirty dishes in the dishwasher",
+  "movingService3Question": "Toilet and bathroom",
+  "movingService3Answer": "- Cleaning of horizontal surfaces (max 1.8 m high)\n- Washing the sink and the bathtub\n- Cleaning the toilet seat and its surroundings\n- Cleaning of faucets and shower head\n- Cleaning the glass shower wall\n- Cleaning the grate of the floor drain in the shower room\n- Cleaning the sauna door\n- Vacuuming and mopping the sauna floor where possible reach\n- Cleaning stains from the outer surfaces of the washing machine and dryer",
+  "movingService4Question": "Upon request",
+  "movingService4Answer": "- Dusting picture frames, lampshades, and high horizontal surfaces (at the height of max. 1.8m)\n- Making the bed\n- Vacuuming the sofa and upholstered furniture\n- Changing bed linen",
   "homeCleaning": "Home Cleaning: 38 €/h (Inc. VAT)",
-  "officeAirbnbCleaning": "Office, Airbnb Cleaning: 29 €/h + VAT",
-  "movingCleaning": "Moving In or Out Cleaning: 44 €/h (Inc. VAT)",
+  "officeAirbnbCleaning": "Office or Airbnb Cleaning: 29 €/h + VAT",
+  "movingCleaning": "Moving Cleaning: 44 €/h (Inc. VAT)",
   "firstTimeCustomerOffer": "First-time Customer Offer",
   "firstTimePackage1": "Package 1",
   "firstTimePackage1Price": "65 €/3h (Inc. VAT) **",
@@ -86,7 +93,8 @@
   "calculate": "Calculate",
   "estimatedCleaningTime": "Estimated Cleaning Time",
   "hours": "hours",
-  "note": "* The final hours will depend on the frequency of cleaning, your lifestyle, the amount of furniture and other details of your home. You can also request a specific number of cleaning hours. The minimum order is 2h.",
+  "homeNote": "* The final hours will depend on the frequency of cleaning, your lifestyle, the amount of furniture and other details of your home. You can also request a specific number of cleaning hours. The minimum order is 2h.",
+  "movingNote": "* The final hours will depend on the frequency of cleaning, your lifestyle, the amount of furniture and other details of your home. You can also request a specific number of cleaning hours. The minimum order is 4h.",
   "aboutUsHeading": "About Us",
   "quote": "At 3C Cleaning, we clean, you relax.",
   "subheading": "3C stands for cleaning, caring, and cheerful.",
@@ -108,6 +116,9 @@
   "messagePlaceholder": "Any specific note you want us to know about?",
   "submitButton": "Submit",
   "contactInformation": "Contact Information",
-  "packageNote1": "* 24,7 €/h after tax deduction",
-  "packageNote2": "** 28,6 €/h after tax deduction"
+  "packageNote1": "24,7 €/h after tax deduction",
+  "packageNote2": "28,6 €/h after tax deduction",
+  "homeCleaningServices": "Home Cleaning",
+  "movingCleaningServices": "Moving Cleaning",
+  "officeCleaningServices": "Office Cleaning"
 }
