--- a/src/i18n/fi.json
+++ b/src/i18n/fi.json
@@ -1,5 +1,5 @@
 {
-  "home": "Koti",
+  "home": "Estusivu",
   "services": "Palvelut",
   "aboutUs": "Meistä",
   "contactUs": "Ota yhteyttä",
@@ -49,17 +49,24 @@
   "formStatusSuccess": "Viesti lähetetty onnistuneesti!",
   "formStatusError": "Viestin lähettäminen epäonnistui. Yritä myöhemmin uudelleen.",
   "serviceIncludeHeading": "Mitä palveluumme kuuluu?",
-  "service1Question": "Yleisesti kaikissa tiloissa",
-  "service1Answer": "- Vaakasuorien pintojen pölyjen pyyhintä (enintään 1,8 metrin korkeudella)\n- Tahrojen puhdistus ovista, ovenkahvoista ja valokatkaisijoista\n- Peilien ja lasipintojen pyyhintä (ikkunoita lukuun ottamatta)\n- Ikkunalautojen pölyjen pyyhintä (enintään 1,8 metrin korkeudella)\n- Lattioiden ja lattialistojen imurointi\n- Mattojen imurointi (ottaen huomioon mattojen materiaali)\n- Lattioiden moppaus (ottaen huomioon lattiamateriaali)\n- Tavaroiden järjestäminen siististi",
-  "service2Question": "Keittiössä",
-  "service2Answer": "- Pesualtaan ja hanan puhdistus\n- Vaakasuorien pintojen puhdistus (enintään 1,8 metrin korkeudella)\n- Lieden puhdistus\n- Välitilan kaakeleiden puhdistus\n- Mikron, jääkaapin, uunin, lieden ja astianpesukoneen ulkopintojen tahranpuhdistus\n- Keittiön kodinkoneiden (leivänpaahdin, kahvinkeitin jne.) pyyhintä ja kiillotus\n- Mikroaaltouunin sisäpuolen puhdistus\n- Roskakaapin ja roskien puhdistus\n- Likaiset astiat astianpesukoneeseen",
-  "service3Question": "Kylpyhuone ja WC",
-  "service3Answer": "- Vaakasuorien pintojen puhdistus (enintään 1,8 metrin korkeudella)\n- Pesualtaan ja kylpyammeen pesu\n- WC-istuimen ja sen ympäristön puhdistus\n- Hanojen ja suihkupään puhdistus\n- Suihkuseinän puhdistus\n- Lattiakaivon ritilän puhdistus suihkutilassa\n- Saunan oven puhdistus\n- Saunan lattian imurointi ja moppaus mahdollisuuksien mukaan\n- Pesukoneen ja kuivausrummun ulkopintojen tahrojen puhdistus",
-  "service4Question": "Makuuhuoneessa ja muissa huoneissa",
-  "service4Answer": "- Kuvakehysten, lampunvarjostimien ja korkeiden vaakasuorien pintojen pölyjen pyyhintä (enintään 1,8 metrin korkeudella)\n- Sängyn petaaminen\n- Sohvan ja pehmustettujen huonekalujen imurointi",
-  "service5Question": "Lisäksi pyynnöstä",
-  "service5Answer": "- Roskien tyhjennys ja poisvienti (vaatii pääsyn roskakatokseen)\n- Raskaiden huonekalujen (yli 6 kg) siirtäminen ja niiden takana siivoaminen\n- Parvekkeen puhdistus (esim. lattia, huonekalut)\n- Kaappien sisäpintojen puhdistus\n- Pinta-alojen puhdistus yli 1,8 m korkeudella (vaatii pienen tikkaat tai jakkaran)\n- Seinien tahrojen puhdistus (Huomioithan, että tahranpoisto voi jättää jäljen seinään.)\n- Kylpyhuoneen lattialaattojen syväpuhdistus harjalla\n- Kylpyhuoneen seinien koko korkeuden pyyhintä\n- Pattereiden puhdistus\n- Kaihtimien pölyjen puhdistus\n- Kasvien pölyjen puhdistus\n- Saunan pesu +30-45 min (saunan koosta riippuen)\n- Jääkaapin sisäpintojen puhdistus +45-60 min/yksittäinen jääkaappi\n- Uunin sisäpintojen puhdistus +45-75 min (siivoustarpeesta riippuen)\n- Liesituulettimen suodattimen irrotus ja puhdistus +30 min\n- Vuodevaatteiden vaihto +20-40 min (sängyn koosta ja tyypistä riippuen)\n- Silittäminen\n- Astioiden käsinpesu\n- Vaikeiden tahrojen poisto (esim. maali, kalkki jne.)",
-  "servicesHeading": "Palvelumme",
+  "homeService1Question": "Yleisesti kaikissa tiloissa",
+  "homeService1Answer": "- Roskien tyhjennys ja poisvienti (vaatii pääsyn roskakatokseen)\n- Vaakasuorien pintojen pölyjen pyyhintä (enintään 1,8 metrin korkeudella)\n- Tahrojen puhdistus ovista, ovenkahvoista ja valokatkaisijoista\n- Peilien ja lasipintojen pyyhintä (ikkunoita lukuun ottamatta)\n- Ikkunalautojen pölyjen pyyhintä (enintään 1,8 metrin korkeudella)\n- Lattioiden ja lattialistojen imurointi\n- Mattojen imurointi (ottaen huomioon mattojen materiaali)\n- Lattioiden moppaus (ottaen huomioon lattiamateriaali)\n- Tavaroiden järjestäminen siististi",
+  "homeService2Question": "Keittiössä",
+  "homeService2Answer": "- Pesualtaan ja hanan puhdistus\n- Vaakasuorien pintojen puhdistus (enintään 1,8 metrin korkeudella)\n- Lieden puhdistus\n- Välitilan kaakeleiden puhdistus\n- Mikron, jääkaapin, uunin, lieden ja astianpesukoneen ulkopintojen tahranpuhdistus\n- Keittiön kodinkoneiden (leivänpaahdin, kahvinkeitin jne.) pyyhintä ja kiillotus\n- Mikroaaltouunin sisäpuolen puhdistus\n- Roskakaapin ja roskien puhdistus\n- Likaiset astiat astianpesukoneeseen",
+  "homeService3Question": "Kylpyhuone ja WC",
+  "homeService3Answer": "- Vaakasuorien pintojen puhdistus (enintään 1,8 metrin korkeudella)\n- Pesualtaan ja kylpyammeen pesu\n- WC-istuimen ja sen ympäristön puhdistus\n- Hanojen ja suihkupään puhdistus\n- Suihkuseinän puhdistus\n- Lattiakaivon ritilän puhdistus suihkutilassa\n- Saunan oven puhdistus\n- Saunan lattian imurointi ja moppaus mahdollisuuksien mukaan\n- Pesukoneen ja kuivausrummun ulkopintojen tahrojen puhdistus",
+  "homeService4Question": "Makuuhuoneessa ja muissa huoneissa",
+  "homeService4Answer": "- Kuvakehysten, lampunvarjostimien ja korkeiden vaakasuorien pintojen pölyjen pyyhintä (enintään 1,8 metrin korkeudella)\n- Sängyn petaaminen\n- Sohvan ja pehmustettujen huonekalujen imurointi\n- Vuodevaatteiden vaihto",
+  "homeService5Question": "Lisäksi pyynnöstä",
+  "homeService5Answer": "- Raskaiden huonekalujen (yli 6 kg) siirtäminen ja niiden takana siivoaminen\n- Parvekkeen puhdistus (esim. lattia, huonekalut)\n- Kaappien sisäpintojen puhdistus\n- Pinta-alojen puhdistus yli 1,8 m korkeudella (vaatii pienen tikkaat tai jakkaran)\n- Kylpyhuoneen seinien koko korkeuden pyyhintä\n- Pattereiden puhdistus\n- Kaihtimien pölyjen puhdistus\n- Kasvien pölyjen puhdistus\n- Saunan pesu +30-45 min (saunan koosta riippuen)\n- Jääkaapin sisäpintojen puhdistus +45-60 min/yksittäinen jääkaappi\n- Uunin sisäpintojen puhdistus +45-75 min (siivoustarpeesta riippuen)\n- Silittäminen",
+  "movingService1Question": "Yleisesti kaikissa tiloissa",
+  "movingService1Answer": "- Roskien tyhjennys ja poisvienti (vaatii pääsyn roskakatokseen)\n- Vaakasuorien pintojen pölyjen pyyhintä (enintään 1,8 metrin korkeudella)\n- Tahrojen puhdistus ovista, ovenkahvoista ja valokatkaisijoista\n- Peilien ja lasipintojen pyyhintä (ikkunoita lukuun ottamatta)\n- Ikkunalautojen pölyjen pyyhintä (enintään 1,8 metrin korkeudella)\n- Lattioiden ja lattialistojen imurointi\n- Mattojen imurointi (ottaen huomioon mattojen materiaali)\n- Lattioiden moppaus (ottaen huomioon lattiamateriaali)\n- Tavaroiden järjestäminen siististi",
+  "movingService2Question": "Keittiössä",
+  "movingService2Answer": "- Pesualtaan ja hanan puhdistus\n- Vaakasuorien pintojen puhdistus (enintään 1,8 metrin korkeudella)\n- Lieden puhdistus\n- Välitilan kaakeleiden puhdistus\n- Mikron, jääkaapin, uunin, lieden ja astianpesukoneen ulkopintojen tahranpuhdistus\n- Keittiön kodinkoneiden (leivänpaahdin, kahvinkeitin jne.) pyyhintä ja kiillotus\n- Mikroaaltouunin sisäpuolen puhdistus\n- Roskakaapin ja roskien puhdistus\n- Likaiset astiat astianpesukoneeseen",
+  "movingService3Question": "Kylpyhuone ja WC",
+  "movingService3Answer": "- Vaakasuorien pintojen puhdistus (enintään 1,8 metrin korkeudella)\n- Pesualtaan ja kylpyammeen pesu\n- WC-istuimen ja sen ympäristön puhdistus\n- Hanojen ja suihkupään puhdistus\n- Suihkuseinän puhdistus\n- Lattiakaivon ritilän puhdistus suihkutilassa\n- Saunan oven puhdistus\n- Saunan lattian imurointi ja moppaus mahdollisuuksien mukaan\n- Pesukoneen ja kuivausrummun ulkopintojen tahrojen puhdistus",
+  "movingService4Question": "Makuuhuoneessa ja muissa huoneissa",
+  "movingService4Answer": "- Kuvakehysten, lampunvarjostimien ja korkeiden vaakasuorien pintojen pölyjen pyyhintä (enintään 1,8 metrin korkeudella)\n- Sängyn petaaminen\n- Sohvan ja pehmustettujen huonekalujen imurointi\n- Vuodevaatteiden vaihto",
   "estimationSectionHeading": "Arvioi siivousaikasi",
   "firstTimeCustomerOffer": "Uuden asiakkaan tarjous",
   "firstTimePackage1": "Paketti 1",
@@ -90,7 +97,8 @@
   "calculate": "Laske",
   "estimatedCleaningTime": "Arvioitu siivousaika",
   "hours": "tuntia",
-  "note": "* Lopulliset tunnit riippuvat siivouksen tiheydestä, elämäntyylistäsi, huonekalujen määrästä ja muista kotisi yksityiskohdista. Voit myös pyytää tiettyä määrää siivoustunteja. Minimipituus on 2 tuntia.",
+  "homeNote": "* Lopulliset tunnit riippuvat siivouksen tiheydestä, elämäntyylistäsi, huonekalujen määrästä ja muista kotisi yksityiskohdista. Voit myös pyytää tiettyä määrää siivoustunteja. Minimipituus on 2 tuntia.",
+  "mmovingNote": "* Lopulliset tunnit riippuvat siivouksen tiheydestä, elämäntyylistäsi, huonekalujen määrästä ja muista kotisi yksityiskohdista. Voit myös pyytää tiettyä määrää siivoustunteja. Minimipituus on 4 tuntia.",
   "aboutUsHeading": "Meistä",
   "quote": "3C Cleaning, me siivoamme, sinä rentoudut.",
   "subheading": "3C tarkoittaa cleaning, caring ja cheerful.",
@@ -112,6 +120,9 @@
   "submitButton": "Lähetä",
   "contactInformation": "Yhteystiedot",
   "or": "T\nA\nI",
-  "packageNote1": "* 24,7 €/h verovähennyksen jälkeen",
-  "packageNote2": "** 28,6 €/h verovähennyksen jälkeen"
+  "packageNote1": "24,7 €/h verovähennyksen jälkeen",
+  "packageNote2": "28,6 €/h verovähennyksen jälkeen",
+  "homeCleaningServices": "Kotisiivous",
+  "movingCleaningServices": "Muuttosiivous",
+  "officeCleaningServices": "Toimistosiivous"
 }
