update service moving

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -4,7 +4,7 @@
   "aboutUs": "About Us",
   "contactUs": "Contact Us",
   "english": "English",
-  "finnish": "Suomi",
+  "finnish": "Finnish",
   "learnMore": "Learn more",
   "orderNow": "Order now",
   "heroWords": ["trustworthy", "dependable", "reliable", "faithful", "honest", "reputable"],
@@ -60,13 +60,15 @@
   "homeService5Question": "Additionally, upon request",
   "homeService5Answer": "- Moving heavy furniture (over 6 kg) and cleaning behind it\n- Cleaning the balcony (e.g., floor, furniture)\n- Cleaning the cabinets from the inside\n- Cleaning surfaces over 1.8 m (requires a small ladder or stool)\n- Wiping the entire height of the bathroom walls\n- Cleaning of radiators\n- Cleaning the blinds from dust\n- Cleaning plants from dust\n- Sauna washing +30-45 min (depending on the size of the sauna)\n- Cleaning the inside of the refrigerator +45-60 min/single-door refrigerator\n- Cleaning the inside of the oven +45-75 min (depending on the cleaning need)\n- Ironing",
   "movingService1Question": "In general / all spaces",
-  "movingService1Answer": "- Emptying and taking out the garbage (requires access to the garbage shelter)\n- Dusting of horizontal surfaces (at the height of max. 1.8 meters)\n- Cleaning stains from doors, door handles, and light switches\n- Wiping mirrors and glass surfaces (excluding windows)\n- Dusting window sills (at the height of max. 1.8m)\n- Vacuuming floors and baseboards\n- Vacuuming carpets (considering the material of the carpets)\n- Mopping the floors (taking into account the floor material)\n- Organizing things neatly",
+  "movingService1Answer": "- Wardrobes and wardrobe doors wiped in and out (Cleaning the cabinets from the inside requires that they are empty.)\n- Doors, door frames, and window frames wiped\n- Mirrors and chrome fixtures cleaned and polished\n- Floor vacuumed and mopped, baseboards dusted\n- Light switches wiped, electric sockets dusted\n- Wall stains removed (if possible). Please note that in some cases cleaning stains from the wall may leave a mark on the wall surface.\n- Wall vents dusted from the outside\n- Lamp shades dusted (if present)",
   "movingService2Question": "Kitchen",
-  "movingService2Answer": "- Cleaning the sink and faucets\n- Cleaning horizontal surfaces (at the height of max. 1.8 m)\n- Cleaning the stove\n- Cleaning the splashback tiles\n- Stain cleaning of the microwave, refrigerator, oven, stove, and dishwasher from the outer surfaces\n- Wiping and polishing kitchen appliances (toaster, coffee machine, etc.)\n- Cleaning the inside of the microwave oven\n- Cleaning of the trash cabinet and trash cans\n- Putting dirty dishes in the dishwasher",
+  "movingService2Answer": "- Cleaning the kitchen cabinets from the inside and outside (Cleaning the cabinets from the inside requires that they are empty.)\n- All horizontal surfaces wiped\n- Kitchen splashback tiles wiped\n- Microwave (inside and outside)\n- Outer surfaces of: oven, fridge (deep oven and fridge cleaning must be booked separately)\n- Garbage area and bins deep cleaned\n- Oven hood (except the filter)\n- Stove removed and deep cleaned from each side, including the back wall (if stove removal is possible)\n- Sink cleaned and polished",
   "movingService3Question": "Toilet and bathroom",
-  "movingService3Answer": "- Cleaning of horizontal surfaces (max 1.8 m high)\n- Washing the sink and the bathtub\n- Cleaning the toilet seat and its surroundings\n- Cleaning of faucets and shower head\n- Cleaning the glass shower wall\n- Cleaning the grate of the floor drain in the shower room\n- Cleaning the sauna door\n- Vacuuming and mopping the sauna floor where possible reach\n- Cleaning stains from the outer surfaces of the washing machine and dryer",
+  "movingService3Answer": "- Wall tiles wiped floor to ceiling\n- Floor tiles brushed\n- Floor drains cleaneds\n- Limescale removed where possible\n- Shower door deep cleaned (if present)\n- Sink, toilet, and faucets cleaned and polished; all taps cleaned and polished\n- Sauna deep cleaned (if present) + sauna door cleaned and polished",
   "movingService4Question": "Upon request",
-  "movingService4Answer": "- Dusting picture frames, lampshades, and high horizontal surfaces (at the height of max. 1.8m)\n- Making the bed\n- Vacuuming the sofa and upholstered furniture\n- Changing bed linen",
+  "movingService4Answer": "- Balcony: floor & surfaces (no deep stain removal for concrete floor) - 30’\n- Fridge and freezer (must be completely empty & melted beforehand) - 30’",
+  "movingService5Question": "Not included in the service",
+  "movingService5Answer": "- Oven hood filter\n- Unclogging drains / pipes\n- Moving heavy furniture (including bulky trash)\n- Anything above 180cm\n- Window cleaning",
   "homeCleaning": "Home Cleaning: 38 €/h (Inc. VAT)",
   "officeAirbnbCleaning": "Office or Airbnb Cleaning: 29 €/h + VAT",
   "movingCleaning": "Moving Cleaning: 44 €/h (Inc. VAT)",
